2003-04-22  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Add the UI to set the base path for ripped files.
	* TODO:
	Updated.

	* sound-juicer.spec.in:
	Added a RPM spec file, thanks to Ronald Bultje.

	* configure.in:
	Generate the spec file, and change gstreamer element check errors
	to warnings.
	
2003-04-11  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* tests/Makefile.am:
	Rationalize the variable use so that I use the variables I should
	be using. Upshot is that it builds on automake 1.6 and 1.7.
	
2003-04-11  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* data/sound-juicer.glade:
	Put back gnome requirement.

2003-04-11  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	Turn on GConf deprecation warnings.

2003-04-11  Ross Burton  <ross@burtonini.com>

	* acinclude.m4:
	Copy the GStreamer element check macro from GStreamer CVS until
	0.6.1 is released.
	* configure.in:
	Check for the elements we use.

	* data/sound-juicer.schemas.in:
	Add a GConf schemas file.
	* data/Makefile.am:
	Install the GConf schemas.

	* Makefile.am (SUBDIRS):
	Mention the po/ directory, and hack in the removal of the intltool
	cache (should be done in intltool I guess).

	* po/POTFILES.in:
	Update for new sources.

	* src/sj-gstreamer-fake.c:
	Remove old code.

	* src/sj-main.c:
	Remove the gconf_init() call as it is deprecated.
	Add an access check for the selected CD-ROM device.
	Realize the main window when setting the window icon so it works
	when a dialog pops up. Odd.

	* src/sj-extractor.c:
	Use g_warning instead of g_print, and clean the messages.

	* tests/Makefile.am:
	Use $(top_srcdir) so that out-of-source builds (and thus
	distcheck) work.

	* README:
	* TODO:
	Updated.
	
2003-04-10  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* data/sound-juicer.glade:
	Use Stock entries.

	* src/Makefile.am:
	* src/sj-main.c: (main):
	Ensure everything is initialized correctly.

	* src/sj-about.c: (on_about_activate):
	Remove some TODO.
