@@ -1,3 +1,8 @@
+2003-04-22  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* sound-juicer.spec.in:
+	use more macros.
+
 2003-04-22  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-prefs.c:
